# geodesic-alpha

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
crates/agentflow-api/: Cargo.toml
crates/agentflow-api/src/: lib.rs
crates/agentflow-classify/: Cargo.toml
crates/agentflow-classify/src/: lib.r  lib.rs
crates/agentflow-index/: Cargo.toml
crates/agentflow-index/src/: lib.rs
crates/agentflow-ingest/: Cargo.toml
crates/agentflow-ingest/src/: lib.rs  main  main.rs
