[workspace]
members = [
    "crates/agentflow-ingest",
    "crates/agentflow-classify",
    "crates/agentflow-index",
    "crates/agentflow-api",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
solana-sdk = "2.3.1"
solana-client = "2.3.1"
solana-transaction-status = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
axum = "0.7"

